--- a/demo-3/Silicon-Gemini-Exercise.ipynb
+++ b/demo-3/Silicon-Gemini-Exercise.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gemini Tutorial\n",
+    "# Demo 3: Gemini Exercise\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ciri/persona-workshop/blob/main/demo-3/Silicon-Gemini.ipynb)\n",
-    "\n",
     "\n",
     "We will start by setting-up the notebook. If you haven't already, first create a Gemini API key [here](https://www.google.com/url?q=https%3A%2F%2Faistudio.google.com%2Fapp%2Fapikey) (free). The free version is somewhat limited (see quotas [here](https://cloud.google.com/gemini/docs/quotas#daily)), but if you add your card information you get $300 free credit for the next 90 days (you don't need to do this for the workshop). You can then add it below."
    ]
@@ -29,10 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries that we will use, if you are missing a library, \n",
+    "# create a new cell with e.g.:\n",
+    "#   !pip install NAME_OF_MISSING\n",
+    "# where NAME_OF_MISSING is the library that you are missing.\n",
+    "\n",
     "import google.generativeai as genai\n",
     "from tqdm import tqdm \n",
     "import numpy as np\n",
@@ -40,6 +44,8 @@
     "import typing_extensions as typing\n",
     "import json\n",
     "import random\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "genai.configure(api_key=api_secret)"
    ]
@@ -50,55 +56,20 @@
    "source": [
     "## Initialize the Generative Model\n",
     "\n",
-    "Let's start by veryifying that we can initialize and call a model."
+    "Let's start by veryifying that we can initialize and call a model. Ask it to write a poem about your country of origin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**Desert's Cradle**\n",
-      "\n",
-      "Oil-rich sands, a land of pride,\n",
-      "Saudi Arabia, a treasure wide.\n",
-      "With soaring towers and ancient lore,\n",
-      "A tapestry of wonders, forevermore.\n",
-      "\n",
-      "Makkah's sacred Kaaba, hearts' desire,\n",
-      "Millions pilgrimage, their souls afire.\n",
-      "Medina's Prophet's Mosque, a place of peace,\n",
-      "Where faith and heritage never cease.\n",
-      "\n",
-      "Red Sea's azure depths, clear as day,\n",
-      "Coral reefs dance, a vibrant display.\n",
-      "Ancient ruins whisper tales of old,\n",
-      "A civilization's story, yet untold.\n",
-      "\n",
-      "Neom's vision, a desert dream,\n",
-      "A futuristic city, a technological gleam.\n",
-      "The Empty Quarter, vast and wide,\n",
-      "A barren realm, where secrets hide.\n",
-      "\n",
-      "Burj Khalifa, world's tallest spire,\n",
-      "A modern marvel, a global fire.\n",
-      "King Abdulaziz Center, a cultural gem,\n",
-      "Preserving history, a timeless totem.\n",
-      "\n",
-      "Oil drives wealth, yet visions soar,\n",
-      "A nation evolving, from shore to shore.\n",
-      "From desert sands to economic might,\n",
-      "Saudi Arabia shines, a brilliant light.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model    = genai.GenerativeModel('gemini-pro')\n",
-    "response = model.generate_content(\"Write a poem about Saudi-Arabia.\")\n",
+    "\n",
+    "# change me\n",
+    "response = model.generate_content('Write me a poem about ...')\n",
+    "\n",
     "print(response.text)"
    ]
   },
@@ -127,49 +98,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Structured output** You can ask a model to return structured output which makes it easier to post-process into statistics."
+    "**Structured output** You can ask a model to return structured output which makes it easier to post-process into statistics.\n",
+    "\n",
+    "\n",
+    "Exercise: complete the prompt below to ask it about airplanes of a region that you are interested in.\n",
+    "Exercise 2: change the object of interest (e.g., as it about cars instead)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'airplane_model': 'Airbus A380-800',\n",
-       "  'builder': 'Airbus',\n",
-       "  'carriers': ['Emirates', 'Qatar Airways', 'Etihad Airways'],\n",
-       "  'max_passengers': 853,\n",
-       "  'top_speed_kmph': 1020},\n",
-       " {'airplane_model': 'Boeing 777-300ER',\n",
-       "  'builder': 'Boeing',\n",
-       "  'carriers': ['Emirates', 'Qatar Airways', 'Saudia', 'Kuwait Airways'],\n",
-       "  'max_passengers': 451,\n",
-       "  'top_speed_kmph': 945},\n",
-       " {'airplane_model': 'Airbus A350-1000',\n",
-       "  'builder': 'Airbus',\n",
-       "  'carriers': ['Qatar Airways', 'Etihad Airways'],\n",
-       "  'max_passengers': 480,\n",
-       "  'top_speed_kmph': 945},\n",
-       " {'airplane_model': 'Boeing 787-9 Dreamliner',\n",
-       "  'builder': 'Boeing',\n",
-       "  'carriers': ['Royal Jordanian', 'Oman Air', 'Gulf Air'],\n",
-       "  'max_passengers': 300,\n",
-       "  'top_speed_kmph': 954},\n",
-       " {'airplane_model': 'Airbus A330-300',\n",
-       "  'builder': 'Airbus',\n",
-       "  'carriers': ['Turkish Airlines', 'Saudia', 'Middle East Airlines'],\n",
-       "  'max_passengers': 436,\n",
-       "  'top_speed_kmph': 913}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Specify the structure as a python class\n",
     "class AirplaneSpecification(typing.TypedDict):\n",
@@ -179,10 +119,15 @@
     "    top_speed_kmph: int\n",
     "    max_passengers: int\n",
     "\n",
-    "# Then, set the correct mime type and schema\n",
+    "# Let's query the modela gain.\n",
     "model  = genai.GenerativeModel(\"gemini-1.5-pro-latest\")\n",
+    "\n",
     "output = model.generate_content(\n",
-    "    \"List a few popular airplane models that are used by major Middle-Eastern airline carriers.\",\n",
+    "    # TODO: edit the prompt so we ask about your region of interest\n",
+    "    \"List a few popular airplane models that are used by major ... airline carriers.\",\n",
+    "    \n",
+    "    # This line is crucial! It specifies that we want json output \n",
+    "    # according to the specification above.\n",
     "    generation_config = genai.GenerationConfig(\n",
     "        response_mime_type=\"application/json\", response_schema=list[AirplaneSpecification]\n",
     "    ),\n",
@@ -203,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,20 +167,25 @@
     }
    ],
    "source": [
+    "# Step 1: Specify the output format\n",
     "class MovieSpecification(typing.TypedDict):\n",
     "    age: int\n",
     "    location: str\n",
     "    food: str\n",
     "\n",
+    "# Step 2: Specify the input prompt template\n",
     "template = \"You are a {age}-year old {gender} from {location}.\"\n",
     "\n",
+    "# Step 3: specify a distribution - for now just a list.\n",
     "population = [\n",
     "    {\"age\":35, \"gender\":\"female\",\"location\":\"China\"},\n",
-    "    {\"age\":42, \"gender\":\"male\",\"location\":\"Nigeria\"},\n",
-    "    {\"age\": 32, \"gender\":\"male\",\"location\":\"Belgium\"},\n",
-    "    {\"age\":42, \"gender\":\"male\",\"location\":\"Saudi-Arabia\"}\n",
+    "    \n",
+    "    # TODO: add a couple more profiles here, by copy-pasting\n",
+    "    #       and then modifying the line\n",
+    "    # ...\n",
     "]\n",
     "\n",
+    "# Step 4: run the survey\n",
     "for person in population:\n",
     "  system_prompt = template.format(**person)\n",
     "\n",
@@ -355,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -394,8 +344,8 @@
     "        population.append({\"age\": age, \"gender\": gender})\n",
     "    return population\n",
     "\n",
-    "population = generate_population(50) # Only use 50 if you have $300 free credits\n",
-    "#population = generate_population(5)\n",
+    "#population = generate_population(50) # Only use 50 if you have $300 free credits\n",
+    "population = generate_population(5)\n",
     "\n",
     "population[:5]"
    ]
@@ -493,13 +443,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
     "df = pd.DataFrame(responses)\n",
     "\n",
     "df['PC']   = df[['privacy_misuse_concern', 'finding_private_info_concern','misuse_by_others_concern', 'unforeseen_use_concern']].mean(axis=1)\n",
@@ -510,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -525,8 +472,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def correlation_plot(var1, var1_label, var2, var2_label):    \n",
     "    corr = df[var1].corr(df[var2])  \n",
     "    plotargs = {\n",
