--- a/demo-3/Silicon-Gemini-Exercise.ipynb
+++ b/demo-3/Silicon-Gemini-Exercise.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the Generative Model\n",
+    "## Exercise 1: Initialize the Generative Model\n",
     "\n",
     "Let's start by veryifying that we can initialize and call a model. Ask it to write a poem about your country of origin."
    ]
@@ -98,11 +98,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Structured output** You can ask a model to return structured output which makes it easier to post-process into statistics.\n",
+    "### Exercise 2: Structured output\n",
+    "You can ask a model to return structured output which makes it easier to post-process into statistics.\n",
     "\n",
-    "\n",
-    "Exercise: complete the prompt below to ask it about airplanes of a region that you are interested in.\n",
-    "Exercise 2: change the object of interest (e.g., as it about cars instead)."
+    "1. Add top speed and max pax to the data definition\n",
+    "2. Complete the prompt below to ask it about airplanes of a region that you are interested in.\n",
+    "3. EXTRA: change the object of interest (e.g., as it about cars instead)."
    ]
   },
   {
@@ -116,15 +117,15 @@
     "    airplane_model: str\n",
     "    builder: str\n",
     "    carriers: list[str]\n",
-    "    top_speed_kmph: int\n",
-    "    max_passengers: int\n",
+    "    #TODO: add top speed in kilometers per hour\n",
+    "    #TODO: add maximum number of passengers\n",
     "\n",
     "# Let's query the modela gain.\n",
     "model  = genai.GenerativeModel(\"gemini-1.5-pro-latest\")\n",
     "\n",
     "output = model.generate_content(\n",
     "    # TODO: edit the prompt so we ask about your region of interest\n",
-    "    \"List a few popular airplane models that are used by major ... airline carriers.\",\n",
+    "    \"List a few popular airplane models ...\",\n",
     "    \n",
     "    # This line is crucial! It specifies that we want json output \n",
     "    # according to the specification above.\n",
