--- a/demo-3/03_Agentes_Virtuales_Gemini_V1_PPIT.ipynb
+++ b/demo-3/03_Agentes_Virtuales_Gemini_V1_PPIT.ipynb
@@ -43,7 +43,7 @@
         "import json\n",
         "import random\n",
         "\n",
-        "genai.configure(api_key=api_secret)"
+        "genai.configure(api_key="Your API here")"
       ]
     },
     {
